# cpp-command-output

./: CMakeLists.txt  README.md  command.h  main.cpp
.github/workflows/: build-all-platforms.yml
